TestRepo2/src/objects/Content_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matrix_type__c</fullName>
        <label>Matrix type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub_Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sub_Category__c</fullName>
        <label>Sub_Sub_Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sub_Sub_Category__c</fullName>
        <label>Sub_Sub_Sub_Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Content Matrix</label>
    <nameField>
        <label>Content Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>